--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.2.7",
     "langchain-community>=0.2.7",
     "langchainhub>=0.1.20",
+    "chromadb>=0.5.4",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
